--- a/AuditoriaHelpDeskIA/docker-compose.yml
+++ b/AuditoriaHelpDeskIA/docker-compose.yml
@@ -1,5 +1,4 @@
 # docker-compose.yml (Versión Corregida con Proxy)
-version: '3.8'
 
 services:
   # Servicio del Backend (sin puertos expuestos)
@@ -8,7 +7,9 @@ services:
     volumes:
       # Esto asegura que la base de datos y el conocimiento persistan
       - ./backend/vector_store:/app/vector_store
-      - ./backend/tickets.db:/app/tickets.db
+      - ./backend/data:/app/data
+    environment:
+      - DB_PATH=/app/data/tickets.db
     # Permite que el contenedor se comunique con Ollama en tu máquina
     extra_hosts:
       - "host.docker.internal:host-gateway"
